attempt to fix how site appears on mobile

--- a/src/app/home/homeStyles.module.sass
+++ b/src/app/home/homeStyles.module.sass
@@ -12,7 +12,7 @@
     border-color: var(--theme-border)
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.25)
 
-@media (max-width: 1600)
+@media (max-width: 1600px)
     .portrait
         border-width: 5px
 
@@ -49,7 +49,7 @@
     text-align: left
 
 // TODO: replace with variable "mobile-width" when possible
-@media (max-width: 750)
+@media (max-width: 750px)
     .bannerInnerContainer
         flex-direction: column
         justify-content: center
